# fast-admin-api

./: .env  .gitignore  =0.0.18  README.md  alembic.ini  main.py  pyproject.toml  start.sh
alembic/: env.py
alembic/versions/: b32c360812f0_add_password_reset_fields.py
app/: main.py
app/core/: config.py  database.py  dependencies.py  logging_config.py  security.py  validators.py
app/models/: __init__.py  association.py  category.py  comment.py  post.py  tag.py  user.py
app/routers/: __init__.py  auth.py  category.py  comment.py  dashboard.py  post.py  tag.py  user.py
app/schemas/: __init__.py  auth.py  category.py  comment.py  dashboard.py  post.py  tag.py  user.py
app/services/: auth_service.py  category_service.py  comment_service.py  dashboard_service.py  email_service.py  post_service.py  tag_service.py  user_service.py
tests/: conftest.py
tests/test_api/: __init__.py  test_auth.py  test_category.py  test_comment.py  test_password_reset.py  test_post.py  test_tag.py
